# libcompsky

./: .codacy.yml  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CompskyConfig.cmake.in  CompskyConfigVersion.cmake.in  INSTALLING_UBUNTU.md  LICENSE  README.md  compsky.pc.in
.circleci/: config.yml
asciify/: CMakeLists.txt
asciify/src/: base.cpp  core.cpp  types.cpp
include/compsky/asciify/: asciify.hpp  asciify_h.hpp  base.hpp  concat.hpp  concat_h.hpp  core.hpp  flags.hpp  init.hpp  init_h.hpp  print.hpp  time.hpp  time_h.hpp  types.hpp  utils.hpp
include/compsky/deasciify/: a2f.hpp  a2n.hpp  char_value.hpp  deasciify.hpp  increment.hpp
include/compsky/dl/: asio.hpp  curl.hpp
include/compsky/ffmpeg/: file.hpp
include/compsky/http/: parse.hpp
include/compsky/macros/: char_in_arr.hpp  is_contained_in_varargs.hpp  likely.hpp  str2switch.hpp  str_parsing.hpp
include/compsky/mysql/: .gitignore  .query.hpp.kate-swp  alternating_qry.hpp  create_config.hpp  except.hpp  flags.hpp  mysql.h.in  mysql.hpp  qryqry.hpp  query.hpp
include/compsky/os/: del.hpp  metadata.hpp  open.hpp  read.hpp  stdinout_defines.hpp  write.hpp
include/compsky/qt5/: tagdialog.hpp
include/compsky/regex/: named_groups.hpp
include/compsky/security/: memset.hpp
include/compsky/server/: asciify_flags.hpp  cache.hpp  connection.cpp  connection.hpp  defines.hpp  handler.hpp  header.hpp  http_acceptor.hpp  http_server.hpp  http_service.hpp  jsonify.hpp  log.hpp  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  response_generation.hpp  server.cpp  server.hpp  static_response.hpp
include/compsky/str/: parse.hpp  verify.hpp
include/compsky/utils/: is_str_dblqt_escaped.hpp  nullstrview.hpp  ptrdiff.hpp  streq.hpp
include/compsky/wangle/: CStringCodec.h  FrameDecoder.h  cache.hpp  compsky_handler.hpp  compsky_pipeline_factory.hpp  jsonify.hpp  static_response.hpp  typedefs.hpp
include/compsky/windoze/: libmeanslib.h
mysql/: CMakeLists.txt
mysql/src/: create_config.cpp  mysql.cpp
packaging/: CMakeLists.txt
qt5/: CMakeLists.txt  tagdialog.cpp
regex/: CMakeLists.txt
regex/docs/: named_groups.md
regex/src/: dummy.cpp  named_groups.cpp
security/: CMakeLists.txt
security/src/: memset.cpp
